# gateway-proto

./: .gitignore  .gitmodules  BUILD.bazel  README.md  WORKSPACE  bazel-bin  bazel-gateway-proto  bazel-genfiles  bazel-out  bazel-testlogs  go.mod  go.sum  pom.xml  repositories.bzl
account/: BUILD.bazel  api.proto  pom.xml
approval/: BUILD.bazel  echo_service.pb.go  echo_service.pb.gw.go  echo_service.proto  form.pb.go  form.proto  pom.xml
data/: BUILD.bazel  data.pb.go  data.proto
frontend/: BUILD.bazel  en.loc  error.pb.go  error.proto  loc_generator.pl
