load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
# load("@com_github_binchencoder_janus_gateway//gateway/protoc-gen-swagger:defs.bzl", "protoc_gen_swagger")

# package(default_visibility = ["//visibility:public"])

# # gazelle:exclude account_service.pb.gw.go

# proto_library(
#     name = "accountpb_proto",
#     srcs = glob(["*.proto"]),
#     deps = [
#         "//data:data_proto",
#         "//frontend:error_proto",
#         "@com_github_binchencoder_janus_gateway//httpoptions:options_proto",
#         "@go_googleapis//google/api:annotations_proto",
#     ],
# )

# go_proto_library(
#     name = "accountpb_go_proto",
#     compilers = [
#         "@io_bazel_rules_go//proto:go_grpc",
#         "@com_github_binchencoder_janus_gateway//gateway/protoc-gen-grpc-gateway:go_gen_grpc_gateway",  # keep
#     ],
#     importpath = "github.com/binchencoder/gateway-proto/account",
#     proto = ":accountpb_proto",
#     deps = [
#         "@com_github_binchencoder_janus_gateway//gateway/runtime:go_default_library",
#         "@com_github_binchencoder_janus_gateway//httpoptions:go_default_library",
#         "@org_golang_google_grpc//naming:go_default_library",
#     ],
# )

# go_library(
#     name = "go_default_library",
#     embed = [":accountpb_go_proto"],
#     importpath = "github.com/binchencoder/gateway-proto/account",
#     deps = [
#         "//data:go_default_library",
#         "//frontend:go_default_library",
#         "@com_github_binchencoder_janus_gateway//gateway/runtime:go_default_library",
#         "@com_github_binchencoder_janus_gateway//httpoptions:go_default_library",
#     ],
# )

# protoc_gen_swagger(
#     name = "accountpb_protoc_gen_swagger",
#     proto = ":accountpb_proto",
#     single_output = False,  # Outputs a single swagger.json file.
# )
