load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "data_proto",
    srcs = [
        "data.proto",
    ],
)

go_proto_library(
    name = "data_go_proto",
    importpath = "github.com/binchencoder/gateway-proto/proto/data",
    proto = ":data_proto",
)

go_library(
    name = "go_default_library",
    embed = [":data_go_proto"],
    importpath = "github.com/binchencoder/gateway-proto/proto/data",
)

java_proto_library(
    name = "data_java_proto",
    deps = [
        ":data_proto",
    ],
)
