load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "error_proto",
    srcs = [
        "error.proto",
    ],
)

go_proto_library(
    name = "error_go_proto",
    importpath = "github.com/binchencoder/gateway-proto/proto/frontend",
    proto = ":frontend_proto",
)

go_library(
    name = "go_default_library",
    embed = [":error_go_proto"],
    importpath = "github.com/binchencoder/gateway-proto/proto/frontend",
)

java_proto_library(
    name = "error_java_proto",
    deps = [
        ":error_proto",
    ],
)

proto_library(
    name = "frontend_proto",
    srcs = ["error.proto"],
)
